favicon + el badge de las notification

--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,11 @@
 html{
     background-color: rgb(238, 238, 238);
 }
+.badge{
+    position: relative;
+    top: -9px;
+    left: 10px;
+}
 
 /*
 for css vars only.
